# Platform

./: CMakeLists.txt  IoCContainer.hpp  IoCContainer.t.hpp  main.cpp
src/Entity/: Animal.cpp  Animal.h  Bot.cpp  Bot.h  Currency.cpp  Currency.h
src/Services/cpp/: UsernameGenerator.cpp
src/Services/h/: UsernameGenerator.h
src/Services/i/: GeneratorInterface.h
src/Workspace/: StartHandling.cpp  StartHandling.h
